# GraphicsProject

./: CMakeLists.txt
project/: box.frag  box.vert  box2.frag  depth.frag  frustum.frag  frustum.vert  main.cpp  sun.frag  sun.vert
project/model/: bot.frag  bot.vert  bot_depth.vert  scene.gltf
project/objects/: MyBot.cpp  MyBot.h  flag.cpp  flag.frag  flag.h  flag.vert  flag_depth.vert  floor.cpp  floor.frag  floor.h  floor.vert  pole.frag  pole.vert  skybox.cpp  skybox.h  sun.cpp  sun.h
project/particles/: particle.cpp  particle.frag  particle.h  particle.vert
project/utils/: lightInfo.h
