cmake_minimum_required(VERSION 3.0)
project(final_project)

find_package(OpenGL REQUIRED)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_subdirectory(external)

include_directories(
	external/glfw-3.1.2/include/
	external/glm-0.9.7.1/
	external/glad-opengl-3.3/include/
	external/
	project/
)

add_executable(final_project
        project/main.cpp
		project/render/shader.cpp
		project/objects/skybox.cpp
		project/objects/stb_image_impl.cpp
		project/objects/floor.cpp
		project/objects/flag.cpp
		project/objects/MyBot.cpp
		project/objects/sun.cpp
		project/particles/particle.cpp
)

target_link_libraries(final_project
		${OPENGL_LIBRARY}
		glfw
		glad
)

